--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "w3d/export-order",
+  "name": "w3d/exportorders",
   "description": "A Magento 2 module that exports orders in different formats",
   "type": "magento2-module",
   "version": "1.0.0",
