--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "A Magento 2 module that exports orders in different formats",
   "type": "magento2-module",
   "version": "0.0.1",
+  "prefer-stable": true,
   "authors": [
         {
             "name": "Nertila Lika",
@@ -21,6 +22,7 @@
     "OSL-3.0",
     "AFL-3.0"
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
     "magento/framework": "~100.0.4"
