--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "OSL-3.0",
     "AFL-3.0"
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "alpha",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
     "magento/framework": "~100.0.4"
