--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "w3d/exportorders",
+  "name": "w3development/exportorders",
   "description": "A Magento 2 module that exports orders in different formats",
   "type": "magento2-module",
   "version": "0.0.1",
