--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
   "description": "A Magento 2 module that exports orders in different formats",
   "type": "magento2-module",
   "version": "0.0.1",
-  "prefer-stable": true,
   "authors": [
         {
             "name": "Nertila Lika",
@@ -27,9 +26,6 @@
     "php": "~5.5.0|~5.6.0|~7.0.0"
   },
   "autoload": {
-    "files": [ "registration.php" ],
-    "psr-4": {
-      "Magento\\SampleNewPage\\": ""
-    }
+    "files": [ "registration.php" ]
   }
 }
