--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
             "role": "Developer"
         }
   ],
-  "license": [
-    "OSL-3.0",
-    "AFL-3.0"
-  ],
-  "minimum-stability": "alpha",
+  "support": {
+    "issues": "https://drupal.org/project/issues/mobile_detect",
+    "irc": "irc://irc.freenode.org/drupal-contribute",
+    "source": "https://github.com/w3development"
+  },
+  "license": "GPL-2.0+",
+  "minimum-stability": "dev",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0"
   },
