--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,17 @@
             "role": "Developer"
         }
   ],
+  
+  "repositories": [
+    {
+      "type": "git",
+      "url": "https://github.com/w3development/exportorders.git"
+    }
+  ],
+  
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0"
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "w3development/exportorders": "0.0.1"
   },
   "autoload": {
     "files": [ "registration.php" ]
