--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
       "url": "https://github.com/w3development/exportorders.git"
     }
   ],
-  
+  "minimum-stability": "dev",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
     "w3development/exportorders": "0.0.1"
