--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,12 @@
   "repositories": [
     {
       "type": "git",
-      "url": "https://github.com/w3development/exportorders.git"
+      "url": "https://github.com/w3development/exportorders"
     }
   ],
   "minimum-stability": "alpha",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "w3development/exportorders": "0.0.1"
+    "php": "~5.5.0|~5.6.0|~7.0.0"
   },
   "autoload": {
     "files": [ "registration.php" ]
