--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
       "url": "https://github.com/w3development/exportorders.git"
     }
   ],
-  "minimum-stability": "alpha",
+  "minimum-stability": "dev",
   "require": {
     "w3d/exportorders": "0.0.1"
   },
