--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,19 @@
         }
   ],
   
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/w3development/exportorders.git"
-    }
-  ],
-  "minimum-stability": "dev-master",
   "require": {
-    "w3development/exportorders": "0.0.1"
+    "w3development/exportorders": "0.0.1",
+    "magento/magento-composer-installer": "*"
   },
+  
+  "extra": {
+    "map": [
+         [
+           "*",
+           "W3development/Exportorders"
+         ]
+    ]
+   }
   "autoload": {
     "files": [ "registration.php" ]
   }
