--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "w3development/exportorders",
+  "name": "w3d/exportorders",
   "description": "A Magento 2 module that exports orders in different formats",
   "type": "magento2-module",
   "version": "0.0.1",
@@ -18,10 +18,6 @@
         }
   ],
   
-  "require": {
-    "w3development/exportorders": "0.0.1"
-  },
-  
   "extra": {
     "map": [
          [
@@ -29,8 +25,5 @@
            "W3development/Exportorders"
          ]
     ]
-   },
-  "autoload": {
-    "files": [ "registration.php" ]
-  }
+   }
 }
