--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "map": [
          [
            "*",
-           "W3development/Exportorders"
+           "W3D/Exportorders"
          ]
     ]
    }
